--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/compiler-cli": "^15.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "ajv": "^7.2.4",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
